# measurement

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
include/: measurement-base.hpp  measurement-fixture.hpp  measurement-typed.hpp  measurement.hpp
include/internal/: dummy.hpp  preprocessor.hpp  type-utils.hpp
samples/: CMakeLists.txt  fixture.cpp  named_type.cpp  simple.cpp  stress_test.cpp  typed.cpp
src/: measure_main.cpp  measurement_base.cpp
toolchains/: gcc-12.cmake  gcc-13.cmake  gcc-14.cmake
